
2024-06-19  David Declerck <david.declerck@ocamlpro.com>

	* cobc.c (process_compile): fix MSVC build command

2024-06-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* tree.c (cb_build_picture): fixed currency digit counting logic

2024-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* replace.c: fix compile warnings and formatting

2024-05-14  David Declerck <david.declerck@ocamlpro.com>

	* flag.def: fix macro usage for MSVC

2024-05-14  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h: inclusion of cobc.h for types
	* codeoptim.c, config.c, error.c, field.c, replace.c, reserved.c:
	  dropped unused header ctype
	* codeoptim.c: dropped unused headers stdlib and string

2024-05-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (main): refactored to not need iterating via "iparams"
	* flag.def (cb_flag_use_constructor), cobc.c (main), cobc.h,
	  codegen.c (codegen_internal, output_so_load_version_check):
	  new flag -fuse-constructor to override possible use of that feature;
	  internally disabling it for generation of libraries/executable after
	  first program as we only need that code once, fixing Win32 build errors
	  and duplication warnings in other environments
	* flag.def: don't suppress the help of -fwinmain under Win32
	* typeck.c (build_expr_finish): use fallback error position token, fixing
	  compiler aborts on broken expressions, bugs #933, #938 and #966
	* typeck.c: minor refactoring within functions

2024-04-24  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* replace.c: optimize speed and memory usage. For speed, we add two
	  fast paths in cb_ppecho_copy_replace() to completely skip the
	  replacement machinery if there is no need for it. For allocations,
	  we only allocate tokens that are coming from the lexer (not the
	  ones passed internally from the copy-replacing stream to the
	  replace stream) and we use a circular buffer for the temporary
	  queue of tokens instead of a list.
